--- a/builds/checkin/dotnet.yaml
+++ b/builds/checkin/dotnet.yaml
@@ -39,6 +39,11 @@ jobs:
           packageType: sdk
           version: $(dotnet.version)
       - task: Bash@3
+        displayName: Install Prerequisites
+        inputs:
+          filePath: scripts/linux/installPrereqs.sh
+          arguments: -u $(NetCorePackageUriLinux)
+      - task: Bash@3
         displayName: Build
         inputs:
           filePath: scripts/linux/buildBranch.sh
@@ -69,6 +74,10 @@ jobs:
         inputs:
           packageType: sdk
           version: $(dotnet.version)
+    - task: PowerShell@2
+        displayName: Install Prerequisites
+        inputs:
+          filePath: scripts/windows/setup/Install-Prerequisites.ps1
       - task: PowerShell@2
         displayName: Build
         inputs:
