--- a/builds/checkin/dotnet.yaml
+++ b/builds/checkin/dotnet.yaml
@@ -42,7 +42,7 @@ jobs:
         displayName: Install Prerequisites
         inputs:
           filePath: scripts/linux/installPrereqs.sh
-          arguments: -u $(NetCorePackageUriLinux)
+          arguments:
       - task: Bash@3
         displayName: Build
         inputs:
@@ -78,6 +78,7 @@ jobs:
         displayName: Install Prerequisites
         inputs:
           filePath: scripts/windows/setup/Install-Prerequisites.ps1
+          arguments:
       - task: PowerShell@2
         displayName: Build
         inputs:
