--- a/test/connectivity/modules/NetworkController/docker/linux/arm32v7/Dockerfile
+++ b/test/connectivity/modules/NetworkController/docker/linux/arm32v7/Dockerfile
@@ -1,5 +1,5 @@
 ARG base_tag=1.0.0-linux-arm32v7
-FROM azureiotedge/azureiotedge-module-base-full:${base_tag}
+FROM edgebuilds.azurecr.io/microsoft/azureiotedge-module-base-full:${base_tag}
 
 ARG EXE_DIR=.
 
