--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -33,7 +33,7 @@ jobs:
         displayName: 'Install cross (fork with docker fix)'
 
       - bash: 'docker system prune -af --volumes'
-        displayName: 'Clean up existing docker images'
+        displayName: 'Clean up cached docker images'
 
       - script: scripts/linux/buildBranch.sh -c $(Build.Configuration) --no-rocksdb-bin --os Unix --dotnet_runtime netcoreapp3.0
         name: build
