--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1"
+base64 = "0.12.0"
 bincode = "1.2"
 bytes = "0.5"
 chrono = "0.4"
@@ -23,6 +24,7 @@ humantime-serde = "1.0"
 lazy_static = "1.4"
 native-tls = "0.2"
 regex = "1"
+reqwest = { version = "0.10", features = ["json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 tokio = { version = "0.2", features = ["blocking", "stream", "sync", "tcp"] }
 tokio-io-timeout = "0.4"
@@ -40,6 +42,7 @@ bytes = "0.5"
 criterion = "0.3"
 fail = { version = "0.3", features = ["failpoints"] }
 matches = "0.1"
+mockito = "0.25"
 proptest = "0.9"
 rand = "0.3"
 serde_json = "1.0"
