--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.csproj
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
