--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Azure IoT Edge Devs"]
 edition = "2018"
 
 [dependencies]
+async-trait = "0.1"
+base64 = "0.12.0"
 bincode = "1.2"
 bytes = "0.5"
 chrono = "0.4"
@@ -21,6 +23,7 @@ lazy_static = "1.4"
 native-tls = "0.2"
 rand = { version = "0.7", optional = true }
 regex = "1"
+reqwest = { version = "0.10", features = ["json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 thiserror = "1.0"
 tokio = { version = "0.2", features = ["blocking", "stream", "sync", "tcp"] }
@@ -39,6 +42,7 @@ bytes = "0.5"
 fail = { version = "0.3", features = ["failpoints"] }
 itertools = "0.9"
 matches = "0.1"
+mockito = "0.25"
 proptest = "0.9"
 serde_json = "1.0"
 tempfile = "3"
