--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -21,8 +21,8 @@ jobs:
         displayName: 'Docker Login'
 
       - script: scripts/linux/buildBranch.sh -c $(Build.Configuration) --no-rocksdb-bin
-        name: Build C# artifacts
-        displayName: Build ($(Build.Configuration))
+        name: build
+        displayName: Build ($(Build.Configuration)) dotnet artifacts
 
       - template: templates/build-broker-watchdog.yaml
 
