--- a/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.CloudProxy/Microsoft.Azure.Devices.Edge.Hub.CloudProxy.csproj
+++ b/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.CloudProxy/Microsoft.Azure.Devices.Edge.Hub.CloudProxy.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices" Version="1.22.2-NestedEdge-1" />
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.22.3-NestedEdge" />
     <PackageReference Include="Stateless" Version="4.0.0" />
   </ItemGroup>
 
