--- a/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -1,6 +1,6 @@
 ﻿{
   "mqttSettings": {
-    "enabled": false,
+    "enabled": true,
     "MaxPendingInboundAcknowledgements": 16,
     "DeviceReceiveAckTimeout": "00:00:00",
     "MaxInboundMessageSize": "262144",
@@ -20,11 +20,6 @@
     "TableQos2StatePersistenceProvider.StorageConnectionString": "UseDevelopmentStorage=true",
     "TableQos2StatePersistenceProvider.StorageTableName": "mqttqos2"
   },
-  "mqttBrokerSettings": {
-    "enabled": true,
-    "port": 1883,
-    "url": "127.0.0.1"
-  },
   "amqpSettings": {
     "enabled": true,
     "scheme": "amqps",
@@ -34,13 +29,16 @@
     "enabled": true,
     "port": 443
   },
-  "authAgentSettings": {
-    "enabled": true,
-    "port": 7120,
-    "baseUrl": "/authenticate/"
+  "mqttBrokerSettings": {
+    "enabled": false
   },
+  "#\"EdgeModuleHubServerCertificateFile\"": "iot-edge-device-ca-edgehubCA.cert.pfx",
+  "#\"EdgeModuleHubServerCAChainCertificateFile\"": "C:\\temp\\edgehub_certs",
+  "EdgeHubDevServerCertificateFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA-full-chain.cert.pem",
+  "EdgeHubDevServerPrivateKeyFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA.key.pem",
+  "EdgeHubDevTrustBundleFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA.cert.pem",
   "IotHubConnectionPoolSize": 1,
-  "IotHubConnectionString": "",
+  "IotHubConnectionString": "HostName=ancan-nested-edge.azure-devices.net;DeviceId=richmaEdge2;ModuleId=$edgeHub;SharedAccessKey=bpr8Ed2UlfRVVXZhZ0Non4FhhaV/1mI3hnyJ0n2DMqU=",
   "mqttTopicNameConversion": {
     "InboundTemplates": [
       "devices/{deviceId}/messages/events/{params}/",
@@ -70,7 +68,7 @@
   "storeAndForward": {
     "timeToLiveSecs": "-1"
   },
-  "RuntimeLogLevel": "info",
+  "RuntimeLogLevel": "debug",
   "ClientCertAuthEnabled": true,
   "OptimizeForPerformance": true,
   "ConnectivityCheckFrequencySecs": 300,
@@ -83,5 +81,12 @@
   "AuthenticationMode": "CloudAndScope",
   "DeviceScopeCacheRefreshRateSecs": 3600,
   "CloudConnectionIdleTimeoutSecs": 3600,
-  "CloseCloudConnectionOnIdleTimeout": true
+  "CloseCloudConnectionOnIdleTimeout": true,
+    "authAgentSettings": {
+    "enabled": false,
+    "port": 7120,
+    "baseUrl": "/authenticate/"
+  },
+  "UpstreamProtocol": "Amqp",
+  "NestedEdgeEnabled": true
 }
