--- a/test/modules/EdgeHubRestartTester/EdgeHubRestartTester.csproj
+++ b/test/modules/EdgeHubRestartTester/EdgeHubRestartTester.csproj
@@ -27,8 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices" Version="1.22.2-NestedEdge-1" />
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.27.1-NestedEdge-1" />
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.22.3-NestedEdge" />
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.27.3-NestedEdge" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.3" />
