--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -14,6 +14,7 @@ steps:
       TestEventHubCompatibleEndpoint,
       TestIotedgedPackageRootSigningCert,
       TestIotHubConnectionString,
+      TestPreviewIotHubConnectionString,
       TestRootCaCertificate,
       TestRootCaKey,
       TestRootCaPassword
